# Wispbound

./: CMakeLists.txt  README.md  main.cpp
dep/ElementaEngine/: CMakeLists.txt  Ideas.txt
dep/ElementaEngine/include/Elementa/: Engine.h
dep/ElementaEngine/include/Elementa/core/: InputHandler.h  Window.h
dep/ElementaEngine/include/Elementa/ecs/: Component.h  Entity.h  Manager.h
dep/ElementaEngine/include/Elementa/graphics/: Color.h  Shader.h  Sprite.h  VAO.h  VBO.h
dep/ElementaEngine/include/Elementa/utils/: File.h  Logger.h
dep/ElementaEngine/src/: Engine.cpp
dep/ElementaEngine/src/core/: InputHandler.cpp  Window.cpp
dep/ElementaEngine/src/ecs/: Manager.cpp
dep/ElementaEngine/src/graphics/: Color.cpp  Shader.cpp  Sprite.cpp
dep/ElementaEngine/src/utils/: File.cpp  Logger.cpp
